[gd_scene format=3 uid="uid://cpotg2phlyni3"]

[ext_resource type="Script" uid="uid://d1vv0bs2ntjs4" path="res://Scripts/register.gd" id="1_opqah"]

[node name="Register" type="Control" unique_id=1715582221]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opqah")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1012240557]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer" unique_id=1285027775]
custom_minimum_size = Vector2(350, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel" unique_id=263409287]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer" unique_id=478675876]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=423388025]
layout_mode = 2
text = "Register My_Hobbies"

[node name="Username" type="LineEdit" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=1621454618]
layout_mode = 2
placeholder_text = "User..."

[node name="Email" type="LineEdit" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=938950618]
layout_mode = 2
placeholder_text = "Email..."

[node name="Password" type="LineEdit" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=972580928]
layout_mode = 2
placeholder_text = "Password..."
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=968852368]
layout_mode = 2
placeholder_text = "Confirm Password..."
secret = true

[node name="Register" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=805379849]
layout_mode = 2
text = "Register"

[node name="Back" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=473245513]
layout_mode = 2
text = "Back
"

[node name="StatusLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=1324388277]
layout_mode = 2

[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/Register" to="." method="_on_RegisterBtn_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/Back" to="." method="_on_BackBtn_pressed"]
